ajustando erros possiveis

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <nav class="cabecalho">
             <a class="logo" href="./index.html"></a>
-
+            
             <div class="cabecalho__pesquisar">
 
                 <input type="search" placeholder="Pesquisar" id="pesquisar" class="pesquisar__input" data-barra-pesquisa>
@@ -37,7 +37,7 @@
     <ul class="videos__container" alt="videos alura" data-lista>
     </ul>>
     <script src="js/mostrarVideos.js" type="module"></script>
-    <script src="js/buscavideo.js" type="module"></script>
+    <script src="js/buscarVideo.js" type="module"></script>
 </body>
 
 </html>
